--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -6,17 +6,28 @@
  * Made By MaterializeCSS.com
  */
 
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@300;600&display=swap');
+
+html,
+body {
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   display: flex;
-  min-height: 100vh;
   flex-direction: column;
 }
-footer{
+
+footer {
   margin-bottom: 0;
 }
+
 main {
   flex: 1 0 auto;
 }
+
 nav ul a,
 nav .brand-logo {
   color: #444;
@@ -34,13 +45,14 @@ p {
   min-height: 380px;
   line-height: 0;
   height: auto;
-  color: rgba(255,255,255,.9);
+  color: rgba(255, 255, 255, .9);
 }
-  .parallax-container .section {
-    width: 100%;
-  }
 
-.logo{
+.parallax-container .section {
+  width: 100%;
+}
+
+.logo {
   width: 45px;
   height: 45px;
 }
@@ -50,6 +62,7 @@ p {
     position: absolute;
     top: 40%;
   }
+
   #index-banner .section {
     top: 10%;
   }
@@ -64,6 +77,7 @@ p {
 .icon-block {
   padding: 0 15px;
 }
+
 .icon-block .material-icons {
   font-size: inherit;
 }
@@ -71,20 +85,22 @@ p {
 footer.page-footer {
   margin: 0;
 }
-.login-form{
+
+.login-form {
   margin-top: 80px;
   margin-bottom: 155px;
 }
 
-.sidebar{
-  height: 100vh;
+.sidebar {
+  height: 140vh;
 }
-.sidebar ul li{
-  height: 44px;
 
+.sidebar ul li {
+  height: 44px;
   transition: .3s ease-out;
 }
-.sidebar ul li a{
+
+.sidebar ul li a {
   padding: 0 30px;
   height: 44px;
   display: flex;
@@ -93,31 +109,124 @@ footer.page-footer {
   align-items: center;
 }
 
-.sidebar ul li:hover{
-  background-color: rgba(0,0,0,0.05);
+.sidebar ul li:hover {
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
-.container1{
+.container1 {
   margin-left: 30px;
   margin-right: 30px;
 }
-.pr-2{
+
+.pr-2 {
   padding-right: 5px;
 }
-#p-0{
-  padding: 0;;
-}
-#m-0{
-  margin: 0;;
+
+#p-0 {
+  padding: 0;
+  ;
 }
 
-.d-flex{
+#m-0 {
+  margin: 0;
+  ;
+}
+
+.d-flex {
   display: flex;
-} 
+}
 
-.w-30{
+.w-30 {
   width: 30px;
 }
-.align-items-center{
+
+.align-items-center {
   align-items: center;
+}
+
+.icon-dash {
+  margin: 28px 0 25.2px 0 !important;
+}
+
+.h-64 {
+  height: 64px;
+}
+
+.Pacifico {
+  font-family: Pacifico;
+}
+
+#row {
+  margin-bottom: 0px !important;
+}
+
+.logo {
+  height: 20%;
+  width: 52%;
+}
+
+
+.logo_u p {
+  line-height: 0;
+  margin-bottom: 32px;
+}
+
+.head-line {
+  height: 2px;
+  background-color: grey;
+}
+
+.contact-detail {
+  margin-left: 10px;
+  text-align: right;
+}
+
+.contact-detail p {
+  margin: 0;
+}
+
+.contact-detail h6 {
+  margin: 0;
+  font-weight: 300;
+}
+
+.sum_detail {
+  font-weight: 700;
+}
+
+.vehicle_image {
+  width: 30%;
+  padding-top: 20px;
+  margin-left: 166px;
+}
+
+.n-p-t {
+  padding: 0 20px 0px 20px;
+}
+
+.fine-wrap {
+  border: solid 1px rgba(51, 51, 51, 0.12);
+}
+
+.fine-wrap p {
+  line-height: 1rem;
+
+}
+
+.fine-content {
+  display: flex;
+  padding: 8px;
+}
+
+.fine-content h2 {
+  margin-top: 2px;
+  margin-left: 16px;
+}
+
+.img_logo {
+  width: 100px;
+}
+
+.car_image {
+  width: 200px;
 }
